fix #644 Docker handle ssl mountpoint and env variable to enable HTTPS